# json-sort

./: Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: build.yml
nix/modules/: fmt.nix  pkgs.nix
nix/pkgs/cargo-clippy/: package.nix
nix/pkgs/json-sort/: package.nix
src/: lib.rs  main.rs
tests/: cli_check.rs  cli_check_only.rs  lib_tests.rs  tests.rs
tests/fixtures/array_of_objects/: expected.txt  input.txt
tests/fixtures/comments_handling/: expected.txt  input.txt
tests/fixtures/mixed_types/: expected.txt  input.txt
tests/fixtures/nested_object/: expected.txt  input.txt
tests/fixtures/scientific_notation/: expected.txt
tests/fixtures/simple_object/: expected.txt  input.txt
tests/fixtures/unicode_preservation/: expected.txt
