[package]
name = "json-sort"
version = "0.1.1"
edition = "2021"
authors = ["Pol Dellaiera <pol.dellaiera@protonmail.com>"]
homepage = "https://github.com/drupol/json-sort"
repository = "https://github.com/drupol/json-sort"
readme = "README.md"
license = "EUPL-1.2"
keywords = ["json", "sort"]
categories = ["command-line-utilities"]
description = "A CLI tool that sorts JSON object keys to make comparisons and diffs easier, without reordering arrays."

[dependencies]
clap = { version = "4.6", features = ["derive"] }
glob = "0.3"
serde_json = "1.0"
anyhow = "1.0"
rayon = "1.12"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "json-sort"
path = "src/main.rs"

[profile.release]
strip = true
